# fancy_llm_router

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.py  test_import.py  wipe-db.sh
configs/: __init__.py  example.yaml  mock.yaml
fancy_llm_router/: __init__.py  __main__.py
fancy_llm_router/api/: __init__.py  auth.py  routes.py  server.py
fancy_llm_router/cli/: __init__.py  main.py
fancy_llm_router/core/: __init__.py  analytics_service.py  benchmark_service.py  config_loader.py  evaluator.py  optimizer.py  prompt_envelope.py  prompt_registry.py  router.py  session.py
fancy_llm_router/metrics/: __init__.py  analyzer.py  collector.py  storage.py
fancy_llm_router/models/: __init__.py  anthropic.py  base.py  generic.py  local.py  mock.py  openai.py
fancy_llm_router/schemas/: __init__.py  analytics.py  config.py  metrics.py  models.py  prompts.py  requests.py  routing.py  sessions.py  tools.py
fancy_llm_router/static/: analytics.html  compare.html
fancy_llm_router/storage/: __init__.py  base.py  postgres.py  sqlite.py
fancy_llm_router/tools/: __init__.py  base.py  database.py  file.py  mock.py  web.py
fancy_llm_router/utils/: __init__.py  hash_utils.py  usage.py
tests/: __init__.py  conftest.py  test_analytics.py  test_api_auth.py  test_basic.py  test_benchmark.py  test_cli.py  test_config_loader.py  test_openai_provider.py  test_optimizer.py  test_pair_state.py  test_prompt_envelope.py  test_router_deployments.py  test_usage.py
